--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.14.1",
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
