--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
     "quasar": "^1.0.0",
@@ -22,6 +23,7 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-quasar": "~3.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vue-waterfall-easy": "^2.4.4"
   }
 }
